[workspace]
members = ["zenoh-arena", "z_bonjour", "z_tetris"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
zenoh = "1.6.2"
zenoh-ext = "1.0.3"
tokio = { version = "1", features = ["full"] }
flume = "0.11"
thiserror = "2.0"
uuid = { version = "1", features = ["v4"] }
bs58 = "0.5"
rand = "0.9.2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
markov_namegen = "0.6.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
console = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
