[package]
name = "z_bonjour"
version.workspace = true
edition.workspace = true

[dependencies]
zenoh-arena = { path = "../zenoh-arena" }
zenoh = { workspace = true }
zenoh-ext = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
flume = { workspace = true }
