[package]
name = "z_tetris"
edition = "2024"
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
zenoh = { workspace = true }
zenoh-ext = { workspace = true }
zenoh-arena = { path = "../zenoh-arena" }
tokio = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
console = { workspace = true }
